Working on list of conferences

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
   <a href="{{ '/' | relative_url }}#bio">About</a>
   <a href="{{ '/' | relative_url }}#publications">Publications</a>
   <a href="{{ '/' | relative_url }}#projects">Research Projects</a>
+  <a href="{{ '/conferences/' | relative_url }}">Conferences</a>
   <a href="{{ '/' | relative_url }}#teaching">Teaching</a>
-  <a href="{{ '/students/' | relative_url }}">Students' Diploma Thesis</a>
+  <a href="{{ '/students/' | relative_url }}">Supervisor</a>
   <a href="{{ '/' | relative_url }}#contact">Contact</a>
 </nav>
