--- a/_includes/contact_icons.html
+++ b/_includes/contact_icons.html
@@ -3,8 +3,19 @@
   <ul class="contact-icons">
   <li><a href="mailto:pawel.rubach [at] sgh.waw.pl"><i class="fas fa-envelope"></i></a></li>
   <li><a href="https://www.linkedin.com/in/pawel-rubach-b932a4/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-  <li><a href="https://www.researchgate.net/profile/Pawel-Rubach" target="_blank"><i class="fab fa-researchgate"></i></a></li>
+    <li>
+  <a href="https://www.scopus.com/authid/detail.uri?authorId=35749054400"
+     target="_blank" class="scopus-icon">
+    <i>
+      <svg width="25" height="25" viewBox="0 0 100 100" fill="currentColor">
+        <text x="50%" y="60%" text-anchor="middle" dy=".35em"
+              font-size="70" font-family="Arial" font-weight="bold">S</text>
+      </svg>
+    </i>
+  </a>
+</li>
   <li><a href="https://scholar.google.com/citations?user=oTbWZ9oAAAAJ" target="_blank"><i class="fas fa-graduation-cap"></i></a></li>
+  <li><a href="https://www.researchgate.net/profile/Pawel-Rubach" target="_blank"><i class="fab fa-researchgate"></i></a></li>
   <li><a href="https://github.com/prubach/" target="_blank"><i class="fab fa-github"></i></a></li>
   <li><a href="https://orcid.org/0000-0001-5487-609X" target="_blank"><i class="fab fa-orcid"></i></a></li>
 </ul>
