--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -92,7 +92,7 @@
            <span class="language">
              {% if course.language == "PL" %}🇵🇱{% elsif course.language == "EN" %}🇬🇧{% endif %}
            </span>
-           {% if course.original %}<span class="original">★</span>{% endif %}
+           {% if course.original %}<span class="original">★ Authored</span>{% endif %}
            <span class="category-label">{{ course.category | capitalize }}</span>
          </div>
       </a>
