Working on SEO, deleted old_about

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
-      content="Pawel Rubach Ph.D. (SGH) — researcher and practitioner. Focuses on developing and applying advanced computing
+        content="{{ page.description | default: "Pawel Rubach Ph.D. (SGH) — researcher and practitioner. Focuses on developing and applying advanced computing
       — distributed systems, Big Data and AI — to both science and practical applications, in particular, in the domain
-      of structural biology and bioinformatics.">
+      of structural biology and bioinformatics." }}">
+
+<!--  <meta name="description"-->
+<!--      content="Pawel Rubach Ph.D. (SGH) — researcher and practitioner. Focuses on developing and applying advanced computing-->
+<!--      — distributed systems, Big Data and AI — to both science and practical applications, in particular, in the domain-->
+<!--      of structural biology and bioinformatics.">-->
   <meta name="author" content="Pawel Rubach">
   <meta name="robots" content="index,follow" />
   <title>{{ page.title | default: site.title }}</title>
