--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,3 +14,29 @@
   <a href="{{ '/' | relative_url }}#teaching">Teaching</a>
   <a href="{{ '/students/' | relative_url }}">Supervisor</a>
 </nav>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Paweł Rubach",
+  "jobTitle": "Researcher",
+  "affiliation": [
+    {
+      "@type": "Organization",
+      "name": "Warsaw School of Economics"
+    },
+    {
+      "@type": "Organization",
+      "name": "University of Warsaw"
+    }
+  ],
+  "url": "https://pawelrubach.pl",
+  "sameAs": [
+    "https://orcid.org/0000-0001-5487-609X",
+    "https://scholar.google.com/citations?user=oTbWZ9oAAAAJ",
+    "https://www.scopus.com/authid/detail.uri?authorId=35749054400",
+    "https://github.com/prubach"
+  ]
+}
+</script>
