--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -3,6 +3,7 @@
 
   <div id="pub-tabs"></div>
   <div id="pub-list"></div>
+  <span class="pub-keywords">Structural biology · Bioinformatics · Distributed computing</span>
   <h4>Download a list of my publications in the <a href="{{ '/assets/data/pawelrubach.bib' | relative_url }}">BIB format here</a></h4>
 </section>
 
