--- a/_includes/students_list.html
+++ b/_includes/students_list.html
@@ -1,6 +1,6 @@
 <section id="thesis">
-<h1>My Students' Diploma Thesis</h1>
-
+<h3>Supervised Master and Bachelor theses in computer science, data science and bioinformatics.</h3>
+  <br>
 <div style="margin-bottom:1rem;">
   <label style="font-size:1.1em;font-weight:bold;">Year:</label>
   <select id="yearFilter">
